# FunASR-GGML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  funasr_gguf.md  funasr_gguf_metadata.md  main.cpp
compute/: adaptor_ops.cpp  adaptor_ops.hpp  encoder_adaptor_gpu.hpp  encoder_ops.cpp  encoder_ops.hpp  fbank.cpp  fbank.hpp  gpu_context.hpp  gpu_runner.hpp  graph_runner.hpp  kv_cache.hpp  llm_ops.cpp  llm_ops.hpp  llm_ops_gpu.cpp  llm_ops_gpu.hpp
core/: config.hpp  gguf_reader.hpp
model/: loader.cpp  loader.hpp  model.hpp  tokenizer.cpp  tokenizer.hpp  weights.hpp
pipeline/: audio_capture.cpp  audio_capture.hpp  pipeline.cpp  pipeline.hpp  prompt_builder.hpp  realtime.hpp  recognizer.hpp
test/: test_adaptor.cpp  test_benchmark.cpp  test_config.cpp  test_encoder.cpp  test_encoder_gpu.cpp  test_fbank.cpp  test_gpu.cpp  test_llm.cpp  test_loader.cpp  test_pipeline.cpp  test_realtime.cpp  test_tokenizer.cpp
tools/: eval_cer.py  eval_cer_v2.py  hf_convert_ggml.py  hf_convert_ggml_q8.py  official_benchmark.py
